Cambios en margenes y colores, va tomando forma el ejercicio

--- a/index.html
+++ b/index.html
@@ -10,50 +10,111 @@
 </head>
 
 <body>
-    <strong>
-        <div class="contenedor">
-            <div class="titulo"></div>
-            <h1> Breathe Code Photo Feed </h1>
-        </div>
-    </strong>
+    <div>
+    <div class="header">
+        <div class="titulo">
+        <h1> <strong>Breathe Code Photo Feed </strong></h1>
+    </div> </div>
 
-    <br> <br> <br> <br>
+
+    <br> <br> <br>
 
     <div>
         <div class="foto1">
             <div>
-                <h2>My first photo</h2>
+                <div>
+                    <h2>My first photo</h2>
+                </div>
+                <div>
+                    <h3>12/14
+                </div>
+                </h3>
             </div>
-            <div> <img src="https://wikifaunia.com/images/thumb/7/78/Teckel4.jpg/500px-Teckel4.jpg" alt="malditos fotografos"
-                class="center"></div>
-            <div> <p>The internet approves this dog #BreatheCode</p></div>
-        </div>
-        <br> <br>
-        <div class="foto2">
-            <h2>Some cute thing</h2>
-            <img src="https://www.hola.com/imagenes/estar-bien/20190624144087/perro-skater-palma-viral-gt/0-691-974/perro-t.jpg?filter=w600"
-                alt="malditos fotografos" class="center">
-            <p>The internet approves this dog #BreatheCode</p>
-        </div>
-        <br> <br>
 
-        <div class="foto3">
-            <h2>There´s a paparazzi around</h2>
-            <img src="https://www.elindependientedegranada.es/sites/default/files/styles/large/public/blogs/paparazzi.jpg?itok=GG4RwMB-"
-                alt="malditos fotografos" class="center">
-            <p>This is me waiting for the screen to show my awesome first website made at #BreatheCode
-            </p>
-        </div>
-        <br> <br>
-        <div class="foto4">
-            <h2>And of course... food!</h2>
-            <img src="https://media.istockphoto.com/photos/food-backgrounds-table-filled-with-large-variety-of-food-picture-id1155240408?k=6&m=1155240408&s=612x612&w=0&h=SEhOUzsexrBBtRrdaLWNB6Zub65Dnyjk7vVrTk1KQSU="
-                alt="morfi" class="center">
-            <p>Because no photo feed is cool without some food on it! #BreatheCode</p>
+            <div class="container1"> <img src="https://wikifaunia.com/images/thumb/7/78/Teckel4.jpg/500px-Teckel4.jpg"
+                    alt="malditos fotografos" class="center"></div>
+            <div>
+                <p>
+                <div class="descripcion">This is my first photo of the feed. this is a multi line comment for testing
+                    purposes. I am learning
+                    to code with <strong>#BreatheCode</strong></p>
+                </div>
+                </h4>
+            </div>
         </div>
 
-    </div>
+
+        <br> <br> <br>
+
+
+        <div>
+            <div class="foto2">
+                <div>
+                    <div>
+                        <h2>Some cute thing</h2>
+                    </div>
+                    <div>
+                        <h3>12/17
+                    </div>
+                    <h3>
+                </div>
+                <div class="container2"></div><img
+                    src="https://www.hola.com/imagenes/estar-bien/20190624144087/perro-skater-palma-viral-gt/0-691-974/perro-t.jpg?filter=w600"
+                    width="500" height="326" alt="malditos fotografos" class="center">
+                <div class="descripcion">The internet approves this dog <strong>#BreatheCode</p></strong></div>
+            </div>
+        </div>
+        <br> <br> <br>
+
+
+
+        <div>
+            <div class="foto3">
+                <div>
+                    <div>
+                        <h2>There's a paparazzi around</h2>
+                    </div>
+                    <div>
+                        <h3>12/17
+                    </div>
+                    <h3>
+                </div>
+                <img src="https://www.elindependientedegranada.es/sites/default/files/styles/large/public/blogs/paparazzi.jpg?itok=GG4RwMB-"
+                    width="500" height="326" alt="malditos fotografos" class="center">
+                <div class="descripcion">This is me waiting for the screen to show my awesome first website made at
+                    <strong>#BreatheCode</strong>
+                </div>
+                </h4>
+                </p>
+            </div>
+            <br> <br> <br>
+
+
+
+
+            <div>
+                <div class="foto4">
+                    <div>
+                        <div>
+                            <h2>And of course... food!</h2>
+                        </div>
+                        <div>
+                            <h3>12/17
+                        </div>
+                        <img src="https://media.istockphoto.com/photos/food-backgrounds-table-filled-with-large-variety-of-food-picture-id1155240408?k=6&m=1155240408&s=612x612&w=0&h=SEhOUzsexrBBtRrdaLWNB6Zub65Dnyjk7vVrTk1KQSU="
+                            width="500" height="326" alt="morfi" class="center">
+                        <p>
+                        <div class="descripcion">Because no photo feed is cool without some food on it!
+                            <strong>#BreatheCode</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <br> <br> <br> <br>
+
 
 </body>
 
 </html>
+
+:)
